# santander-dio-backend-python-desafio-4

./: README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 571241bb6dd3_init_db.py
workout_api/: main.py  routers.py
workout_api/atleta/: controller.py  models.py  schemas.py
workout_api/categorias/: controller.py  schemas.py
workout_api/centro_treinamento/: controller.py  models.py  schemas.py
workout_api/contrib/: models.py  schemas.py
