[tool.poetry]
name = "fastapi-dio"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.116.0"
uvicorn = "^0.35.0"
SQLAlchemy = "^2.0.41"
pydantic = "^2.11.7"
alembic = "^1.16.3"
asyncpg = "^0.30.0"
pydantic-settings = "^2.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
